Generate Views for various modules and routes, update Roles and Permissions into archive seeder. SoapFELController not update. HasProfilePhoto published for php artisan for the config url that generate profile photo the user. Add Libraries php to config files into composer.json.

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "spatie/laravel-permission": "^5.3",
         "ext-soap": "*",
         "ext-json": "*",
-        "ext-simplexml": "*"
+        "ext-simplexml": "*",
+	  "ext-libxml": "*"
 	},
     "require-dev": {
         "facade/ignition": "^2.5",
