--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
-        "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.65",
-        "laravel/jetstream": "^2.4",
-        "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5",
-        "livewire/livewire": "^2.5",
-        "spatie/laravel-permission": "^5.3",
+        "fruitcake/laravel-cors": "2.0",
+        "guzzlehttp/guzzle": "7.4.1",
+        "laravel/framework": "8.65",
+        "laravel/jetstream": "2.6",
+        "laravel/sanctum": "2.14",
+        "laravel/tinker": "2.7",
+        "livewire/livewire": "2.9",
+        "spatie/laravel-permission": "5.5",
         "ext-soap": "*",
         "ext-json": "*",
         "ext-simplexml": "*",
