--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "@tailwindcss/aspect-ratio": "^0.4.0",
-        "@tailwindcss/forms": "^0.4.0",
-        "@tailwindcss/line-clamp": "^0.3.1",
-        "@tailwindcss/typography": "^0.5.0",
-        "alpinejs": "^3.0.6",
-        "autoprefixer": "^10.4.2",
-        "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
-        "postcss": "^8.4.5",
-        "postcss-import": "^14.0.1",
-        "tailwindcss": "^3.0.15"
+        "@tailwindcss/aspect-ratio": "0.4.0",
+        "@tailwindcss/forms": "0.4.0",
+        "@tailwindcss/line-clamp": "0.3.1",
+        "@tailwindcss/typography": "0.5.0",
+        "alpinejs": "3.8.1",
+        "autoprefixer": "10.4.2",
+        "axios": "0.21",
+        "laravel-mix": "6.0.39",
+        "lodash": "4.17.21",
+        "postcss": "8.4.5",
+        "postcss-import": "14.0.2",
+        "tailwindcss": "3.0.15"
     }
 }
