--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
         "postcss": "^8.4.5",
         "postcss-import": "^14.0.1",
         "tailwindcss": "^3.0.15"
+    },
+    "dependencies": {
+        "tom-select": "^2.0.0"
     }
 }
