--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
         "tailwindcss": "^3.0.15"
     },
     "dependencies": {
-        "tom-select": "^2.0.0"
+        "daisyui": "^1.24.3"
     }
 }
