--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.0",
+        "php": "8.1",
         "fruitcake/laravel-cors": "2.0",
         "guzzlehttp/guzzle": "7.4.1",
         "laravel/framework": "8.65",
