--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
+        "ext-curl": "*",
+        "ext-gd": "*",
         "ext-intl": "*",
         "ext-json": "*",
         "ext-libxml": "*",
         "ext-simplexml": "*",
         "ext-soap": "*",
-        "ext-gd": "*",
         "fruitcake/laravel-cors": "2.0",
         "guzzlehttp/guzzle": "7.4.1",
         "laravel/framework": "8.65",
@@ -20,8 +21,8 @@
         "laravel/tinker": "2.7",
         "livewire/livewire": "2.9",
         "mike42/escpos-php": "^3.0",
-        "spatie/laravel-permission": "5.5",
-        "ext-curl": "*"
+        "rappasoft/laravel-livewire-tables": "^1.24",
+        "spatie/laravel-permission": "5.5"
     },
     "suggest" : {
         "ext-gd" : "Used for image printing if present."
