--- a/vercel.json
+++ b/vercel.json
@@ -6,10 +6,16 @@
             "runtime": "vercel-php@0.5.3"
         }
     },
-    "routes": [{
+    "routes": [
+        {
+            "src": "/(css|js)/(.*)",
+            "dest": "public/$1/$2"
+        },
+        {
         "src": "/(.*)",
         "dest": "/api/index.php"
-    }],
+        }
+    ],
     "env": {
         "APP_NAME": "Pharmasys Alpha",
         "APP_ENV": "production",
@@ -21,10 +27,13 @@
         "APP_PACKAGES_CACHE": "/tmp/packages.php",
         "APP_ROUTES_CACHE": "/tmp/routes.php",
         "APP_SERVICES_CACHE": "/tmp/services.php",
-        "VIEW_COMPILED_PATH": "/tmp",
+        "VIEW_COMPILED_PATH": "/tmp/views",
 
         "CACHE_DRIVER": "array",
         "LOG_CHANNEL": "stderr",
-        "SESSION_DRIVER": "cookie"
+        "SESSION_DRIVER": "cookie",
+
+        "SSR_TEMP_PATH": "/tmp/ssr",
+        "NODE_PATH": "node"
     }
 }
