--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,11 @@
 {
     "version": 2,
-      "framework": null,
-      "builds": [
-        { "src": "/api/index.php", "use": "vercel-php@0.6.0" },
-        { "src": "/public/**", "use": "@vercel/static" }
-    ],
+    "framework": null,
+    "functions": {
+        "api/index.php": {
+          "runtime": "vercel-php@0.5.3"
+        }
+      },
     "routes": [
         {
             "src": "/(css|js)/(.*)",
