Update dependencies and migrate to pnpm

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "ext-gd" : "Used for image printing if present."
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.8",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
