--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@tailwindcss/aspect-ratio": "^0.4.2",
-        "@tailwindcss/forms": "^0.5.2",
-        "@tailwindcss/line-clamp": "^0.4.2",
-        "@tailwindcss/typography": "^0.5.0",
-        "alpinejs": "^3.0.6",
-        "autoprefixer": "^10.4.7",
-        "axios": "^0.27",
-        "daisyui": "^2.31.0",
-        "laravel-vite-plugin": "^0.6.0",
-        "lodash": "^4.17.19",
-        "postcss": "^8.4.14",
-        "tailwindcss": "^3.1.0",
-        "vite": "^3.0.0"
+        "@tailwindcss/aspect-ratio": "0.4.2",
+        "@tailwindcss/forms": "0.5.4",
+        "@tailwindcss/line-clamp": "0.4.4",
+        "@tailwindcss/typography": "0.5.9",
+        "alpinejs": "3.12.3",
+        "autoprefixer": "10.4.14",
+        "axios": "1.4.0",
+        "daisyui": "3.5.0",
+        "laravel-vite-plugin": "0.7.8",
+        "lodash": "4.17.21",
+        "postcss": "8.4.27",
+        "tailwindcss": "3.3.3",
+        "vite": "4.4.7"
     }
 }
