--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,10 @@
         "laravel/framework": "^9.19",
         "laravel/jetstream": "^2.12",
         "laravel/sanctum": "^3.0",
+        "maatwebsite/excel": "^3.1",
+        "mediconesystems/livewire-datatables": "^0.10.1",
+        "psr/simple-cache": "^3.0",
+        "rappasoft/laravel-livewire-tables": "^2.15",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.5",
         "spatie/laravel-permission": "^5.5"
