--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.0.2",
+        "php": "^8.1",
         "ext-curl": "*",
         "ext-intl": "*",
         "ext-json": "*",
@@ -13,15 +13,13 @@
         "ext-simplexml": "*",
         "ext-soap": "*",
         "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^9.19",
-        "laravel/jetstream": "^2.12",
-        "laravel/sanctum": "^3.0",
+        "laravel/framework": "^10.0",
+        "laravel/jetstream": "^3.0",
+        "laravel/sanctum": "^3.2",
         "maatwebsite/excel": "^3.1",
-        "mediconesystems/livewire-datatables": "^0.10.1",
         "psr/simple-cache": "^3.0",
-        "rappasoft/laravel-livewire-tables": "^2.15",
         "laravel/tinker": "^2.7",
-        "livewire/livewire": "^2.5",
+        "livewire/livewire": "^3.0",
         "spatie/laravel-permission": "^5.5"
     },
     "suggest" : {
@@ -33,9 +31,9 @@
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.24",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0"
+        "nunomaduro/collision": "^7.0",
+        "phpunit/phpunit": "^10.0",
+        "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
         "psr-4": {
@@ -77,6 +75,6 @@
             "pestphp/pest-plugin": true
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
